observabilidad/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 443
    targetPort: 3000
    protocol: TCP
