observabilidad/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
spec: 
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.local`)
      priority: 10
      services:
        - name: grafana-service
          port: 80
          scheme: http
      tls:
        certResolver: letsencrypt
        domains:
          - main: grafana.local
